# 26RC_R2_arm_controller

./: .gitignore  CMakeLists.txt  package.xml
config/: arm_controller.yaml
include/arm_controller/: arm_controller.hpp  arm_ecat_control.hpp  motor_controller.hpp  sbus_parser.hpp  state_machine.hpp
launch/: arm_controller.launch.py
src/: arm_controller.cpp  main.cpp  motor_controller.cpp  sbus_parser.cpp  state_machine.cpp
tools/: read_joint.py
